On index, paginate to 1. Add a list of posts.
Signed-off-by: Joel Fernandes <joel@linuxinternals.org>

--- a/linuxinternals/index.html
+++ b/linuxinternals/index.html
@@ -1,7 +1,7 @@
 ---
 layout: bloglist
 sidebar: false
-title: List of articles
+title: List of Linux Internals articles: LinuxInternals.org
 footer: false
 ---
 <h1>
