--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 layout: default
 ---
 <div class="blog-index">
+
+<article>
+Here's a list of all the articles and posts:
+{% for post in site.posts %}
+<font face="monospace">
+ <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
+</font>
+{% endfor %}
+</article>
+
   {% assign index = true %}
   {% for post in paginator.posts %}
   {% assign content = post.content %}
     <article>
+Most Recept Post:
       {% include article.html %}
     </article>
   {% endfor %}
