--- a/linuxinternals/index.html
+++ b/linuxinternals/index.html
@@ -1,7 +1,7 @@
 ---
 layout: bloglist
 sidebar: false
-title: List of Linux Internals articles: LinuxInternals.org
+title: List of Linux Internals articles@ LinuxInternals.org
 footer: false
 ---
 <h1>
