--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ layout: default
 <div class="blog-index">
 
 <article>
-Here's a list of all the articles and posts:
+{% markdown about.markdown %}
+Here's a list of all posts on this site:
 {% for post in site.posts %}
 <font face="monospace">
  <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
