--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 
 <article>
 {% markdown about.markdown %}
-Here's a list of all posts on this site:
+Full list of all posts on this site:
 {% for post in site.posts %}
 <font face="monospace">
  <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
