--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 Full list of all posts on this site:
 {% for post in site.posts %}
 <font face="monospace">
- <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
+ <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a>  [{{ post.categories | category_links }}] </li>
 </font>
 {% endfor %}
 </article>
