--- a/linuxinternals/index.html
+++ b/linuxinternals/index.html
@@ -5,7 +5,7 @@ title: List of Linux Internals articles@ LinuxInternals.org
 footer: false
 ---
 <h1>
-Here's a list of Linux Internals articles I wrote:
+Here's a list of my Linux Internals articles:
 </h1>
 <div id="blog-archives">
 {% for post in site.categories.linuxinternals reverse %}
