--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@ layout: default
 Full list of all posts on this site:
 {% for post in site.posts %}
 <font face="monospace">
- <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a>  [{{ post.categories | category_links }}] </li>
+ <li>
+   <span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a> 
+   <!--
+     Commenting out categories in square brackets, because it does not work
+     properly. Check posts/category.html if you want to generate linked
+     categories here.
+
+   [{{ post.categories | category_links }}]
+
+     !-->
+ </li>
 </font>
 {% endfor %}
 </article>
