--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 
 <article>
 {% markdown about.markdown %}
-Full list of all posts on this site:
+Full list of all blog posts on this site:
 {% for post in site.posts %}
 <font face="monospace">
  <li>
