--- a/preview/books.html
+++ b/preview/books.html
@@ -9,10 +9,10 @@
 <div class="page">
 <div class="nav">
 <p class="navhdr">Joel's site:</p>
-<a href="/overview.html">Start Here</a><br>
-<a href="/index.html">Homepage</a><br>
-<a href="/blog/index.html">Blog</a><br>
-<a href="/bio.html">Bio</a><br>
+<a href="/preview/overview.html">Start Here</a><br>
+<a href="/preview/index.html">Homepage</a><br>
+<a href="/preview/blog/index.html">Blog</a><br>
+<a href="/preview/bio.html">Bio</a><br>
 </div>
 <div class="content">
 <h1>books</h1>
