--- a/preview/joel/index.html
+++ b/preview/joel/index.html
@@ -3,20 +3,20 @@
 <title>Joel Fernandes: Resume</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="/page.css">
+<link rel="stylesheet" href="/preview/page.css">
 </head>
 <body>
 <div class="page">
 <div class="nav">
 <p class="navhdr">Joel's site:</p>
-<a href="/overview.html">Start Here</a><br>
-<a href="/index.html">Homepage</a><br>
-<a href="/blog/index.html">Blog</a><br>
-<a href="/bio.html">Bio</a><br>
+<a href="/preview/overview.html">Start Here</a><br>
+<a href="/preview/index.html">Homepage</a><br>
+<a href="/preview/blog/index.html">Blog</a><br>
+<a href="/preview/bio.html">Bio</a><br>
 </div>
 <div class="content">
 <h1>Joel Fernandes - Resume</h1>
-<p>Download: <a href="/joel/joel-resume.pdf">PDF</a></p>
+<p>Download: <a href="/preview/joel/joel-resume.pdf">PDF</a></p>
 <h2>Summary</h2>
 <p>Principal Engineer at NVIDIA. 10+ years Linux kernel development. Core contributor to RCU, scheduler, tracing.</p>
 </div>
