--- a/preview/resources/index.html
+++ b/preview/resources/index.html
@@ -3,17 +3,17 @@
 <title>Joel Fernandes: Talks</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="/page.css">
+<link rel="stylesheet" href="/preview/page.css">
 <style type="text/css">li { padding-bottom:15px; }</style>
 </head>
 <body>
 <div class="page">
 <div class="nav">
 <p class="navhdr">Joel's site:</p>
-<a href="/overview.html">Start Here</a><br>
-<a href="/index.html">Homepage</a><br>
-<a href="/blog/index.html">Blog</a><br>
-<a href="/bio.html">Bio</a><br>
+<a href="/preview/overview.html">Start Here</a><br>
+<a href="/preview/index.html">Homepage</a><br>
+<a href="/preview/blog/index.html">Blog</a><br>
+<a href="/preview/bio.html">Bio</a><br>
 </div>
 <div class="content">
 <h1>Talks & Presentations</h1>
