--- a/preview/about-site.html
+++ b/preview/about-site.html
@@ -65,7 +65,7 @@
 
 <p>This website is built using <a href="https://jekyllrb.com/">Jekyll</a>, a static site generator, and hosted on <a href="https://pages.github.com/">GitHub Pages</a>.</p>
 
-<p>This website’s design is inspired by <a href="https://www.brendangregg.com/">Brendan Gregg’s beautiful website</a>, who was kind enough to allow me to reuse it.</p>
+<p>This website’s design is inspired by <a href="https://www.brendangregg.com/">Brendan Gregg’s beautiful website</a>, who was kind enough to allow me to reuse some design ideas.</p>
 
 </div>
 
