Remove About and RSS from right pane

--- a/about-site.html
+++ b/about-site.html
@@ -45,9 +45,7 @@
 <li class="recent">2019-10-18 &raquo;<br><a href="/blog/2019-10-18/pluscal-store-ordering.html">Modeling (lack of) store ordering using PlusCal - and a wishlist</a></li>
 
 </ul>
-<p><a href="/">All posts</a><br>
-<a href="/bio.html">About</a><br>
-<a href="/feed.xml">RSS</a></p>
+<p><a href="/">All posts</a></p>
 </div>
 
 <div class="site">
