Add personal posts section
- Personal posts have category 'personal'
- Personal posts filtered out from main blog list and categories
- New Personal Posts section on home page
- New personal.html page listing all personal posts
- Personal Posts link added to left nav
- Recent personal posts shown separately in right sidebar
- Added dummy weather post for Charlottesville

--- a/categories.html
+++ b/categories.html
@@ -10,12 +10,14 @@ title: Posts by Category
 
 {% assign categories = site.categories | sort %}
 {% for category in categories %}
+{% unless category[0] == "personal" %}
 <h2 id="{{ category[0] | slugify }}">{{ category[0] | capitalize }}</h2>
 <ul>
 {% for post in category[1] %}
 <li><a href="{{ post.url }}">{{ post.title }}</a> <span style="color:#666">({{ post.date | date: "%Y-%m-%d" }})</span></li>
 {% endfor %}
 </ul>
+{% endunless %}
 {% endfor %}
 
 </div>
