Deploy personal posts section

--- a/categories.html
+++ b/categories.html
@@ -24,6 +24,7 @@
 <a href="/memory-ordering.html">Memory Ordering</a><br>
 <a href="/gpu.html">GPU Drivers</a><br>
 <a href="/resources/">Talks</a><br>
+<a href="/personal.html">Personal Posts</a><br>
 <a href="/joel/">Resume</a><br>
 </div>
 
@@ -31,27 +32,222 @@
 <p class="navhdr">Recent posts:</p>
 <ul>
 
+
+
+
 <li class="recent">2026-02-08 &raquo;<br><a href="/blog/2026-02-08/rust-clist-kernel.html">CList: Iterating C Linked Lists from Rust in the Kernel</a></li>
+
+
+
+
+
+
+
 
 <li class="recent">2023-06-25 &raquo;<br><a href="/blog/2023-06-25/svm-vectors.html">SVM and vectors for the curious</a></li>
 
+
+
+
+
+
 <li class="recent">2023-06-10 &raquo;<br><a href="/blog/2023-06-10/selinux-procfs.html">SELinux Debugging on ChromeOS</a></li>
+
+
+
+
+
 
 <li class="recent">2023-04-28 &raquo;<br><a href="/blog/2023-04-28/hazard-pointers.html">Understanding Hazard Pointers</a></li>
 
+
+
+
+
+
 <li class="recent">2023-04-25 &raquo;<br><a href="/blog/2023-04-25/ppc-stack-guards.html">PowerPC stack guard false positives in Linux kernel</a></li>
+
+
+
+
+
 
 <li class="recent">2023-02-24 &raquo;<br><a href="/blog/2023-02-24/ycm-working.html">Getting YouCompleteMe working for kernel development</a></li>
 
+
+
+
+
+
 <li class="recent">2023-01-29 &raquo;<br><a href="/blog/2023-01-29/figuring-out-herd7.html">Figuring out herd7 memory models</a></li>
+
+
+
+
+
 
 <li class="recent">2022-12-15 &raquo;<br><a href="/blog/2022-12-15/modeling-condition-variables.html">Modeling Condition Variables using Formal Methods</a></li>
 
+
+
+
+
+
 <li class="recent">2022-11-13 &raquo;<br><a href="/blog/2022-11-13/hrtimer.html">On workings of hrtimer's slack time functionality</a></li>
+
+
+
+
+
 
 <li class="recent">2020-10-25 &raquo;<br><a href="/blog/2020-10-25/cpp-ref.html">C++ rvalue references</a></li>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </ul>
+
+<p class="navhdr">Recent personal:</p>
+<ul>
+
+
+
+
+
+
+<li class="recent">2026-02-08 &raquo;<br><a href="/blog/2026-02-08/charlottesville-weather.html">Charlottesville Weather Today</a></li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</ul>
+
 <p><a href="/">All posts</a><br>
 <a href="/bio.html">About</a><br>
 <a href="/feed.xml">RSS</a></p>
@@ -69,6 +265,7 @@
 
 
 
+
 <h2 id="armv8">Armv8</h2>
 <ul>
 
@@ -76,12 +273,16 @@
 
 </ul>
 
+
+
 <h2 id="c">C++</h2>
 <ul>
 
 <li><a href="/blog/2020-10-25/cpp-ref.html">C++ rvalue references</a> <span style="color:#666">(2020-10-25)</span></li>
 
 </ul>
+
+
 
 <h2 id="debugging">Debugging</h2>
 <ul>
@@ -92,6 +293,8 @@
 
 </ul>
 
+
+
 <h2 id="electronics">Electronics</h2>
 <ul>
 
@@ -100,6 +303,8 @@
 <li><a href="/blog/2014-06-04/a-microsd-card-remote-switcher.html">MicroSD card remote switch</a> <span style="color:#666">(2014-06-04)</span></li>
 
 </ul>
+
+
 
 <h2 id="embedded">Embedded</h2>
 <ul>
@@ -110,12 +315,16 @@
 
 </ul>
 
+
+
 <h2 id="formal-methods">Formal-methods,</h2>
 <ul>
 
 <li><a href="/blog/2022-12-15/modeling-condition-variables.html">Modeling Condition Variables using Formal Methods</a> <span style="color:#666">(2022-12-15)</span></li>
 
 </ul>
+
+
 
 <h2 id="formalmethods">Formalmethods</h2>
 <ul>
@@ -126,12 +335,16 @@
 
 </ul>
 
+
+
 <h2 id="herd7">Herd7</h2>
 <ul>
 
 <li><a href="/blog/2023-01-29/figuring-out-herd7.html">Figuring out herd7 memory models</a> <span style="color:#666">(2023-01-29)</span></li>
 
 </ul>
+
+
 
 <h2 id="kernel">Kernel</h2>
 <ul>
@@ -161,6 +374,8 @@
 <li><a href="/blog/2014-04-23/design-of-fork-followed-by-exec-in-linux.html">Design of fork followed by exec in Linux</a> <span style="color:#666">(2014-04-23)</span></li>
 
 </ul>
+
+
 
 <h2 id="linux">Linux</h2>
 <ul>
@@ -193,6 +408,8 @@
 
 </ul>
 
+
+
 <h2 id="linuxinternals">Linuxinternals</h2>
 <ul>
 
@@ -200,12 +417,16 @@
 
 </ul>
 
+
+
 <h2 id="lkmm">Lkmm</h2>
 <ul>
 
 <li><a href="/blog/2023-01-29/figuring-out-herd7.html">Figuring out herd7 memory models</a> <span style="color:#666">(2023-01-29)</span></li>
 
 </ul>
+
+
 
 <h2 id="locking">Locking</h2>
 <ul>
@@ -216,12 +437,18 @@
 
 </ul>
 
+
+
 <h2 id="machinelearning">Machinelearning</h2>
 <ul>
 
 <li><a href="/blog/2023-06-25/svm-vectors.html">SVM and vectors for the curious</a> <span style="color:#666">(2023-06-25)</span></li>
 
 </ul>
+
+
+
+
 
 <h2 id="pluscal">Pluscal</h2>
 <ul>
@@ -230,12 +457,16 @@
 
 </ul>
 
+
+
 <h2 id="productivity">Productivity</h2>
 <ul>
 
 <li><a href="/blog/2023-02-24/ycm-working.html">Getting YouCompleteMe working for kernel development</a> <span style="color:#666">(2023-02-24)</span></li>
 
 </ul>
+
+
 
 <h2 id="rcu">Rcu</h2>
 <ul>
@@ -252,12 +483,16 @@
 
 </ul>
 
+
+
 <h2 id="rcu">Rcu,</h2>
 <ul>
 
 <li><a href="/blog/2020-04-24/gus.html">GUS (Global Unbounded Sequences)</a> <span style="color:#666">(2020-04-24)</span></li>
 
 </ul>
+
+
 
 <h2 id="scheduler">Scheduler</h2>
 <ul>
@@ -270,12 +505,16 @@
 
 </ul>
 
+
+
 <h2 id="selinux">Selinux</h2>
 <ul>
 
 <li><a href="/blog/2023-06-10/selinux-procfs.html">SELinux Debugging on ChromeOS</a> <span style="color:#666">(2023-06-10)</span></li>
 
 </ul>
+
+
 
 <h2 id="srcu">Srcu</h2>
 <ul>
@@ -284,6 +523,8 @@
 
 </ul>
 
+
+
 <h2 id="stack">Stack</h2>
 <ul>
 
@@ -291,12 +532,16 @@
 
 </ul>
 
+
+
 <h2 id="svm">Svm</h2>
 <ul>
 
 <li><a href="/blog/2023-06-25/svm-vectors.html">SVM and vectors for the curious</a> <span style="color:#666">(2023-06-25)</span></li>
 
 </ul>
+
+
 
 <h2 id="synchronization">Synchronization</h2>
 <ul>
@@ -313,6 +558,8 @@
 
 </ul>
 
+
+
 <h2 id="timers">Timers</h2>
 <ul>
 
@@ -320,12 +567,16 @@
 
 </ul>
 
+
+
 <h2 id="tla">Tla+</h2>
 <ul>
 
 <li><a href="/blog/2019-10-18/pluscal-store-ordering.html">Modeling (lack of) store ordering using PlusCal - and a wishlist</a> <span style="color:#666">(2019-10-18)</span></li>
 
 </ul>
+
+
 
 <h2 id="tracing">Tracing</h2>
 <ul>
@@ -340,6 +591,8 @@
 
 </ul>
 
+
+
 <h2 id="vectors">Vectors</h2>
 <ul>
 
@@ -347,12 +600,15 @@
 
 </ul>
 
+
+
 <h2 id="vim">Vim</h2>
 <ul>
 
 <li><a href="/blog/2023-02-24/ycm-working.html">Getting YouCompleteMe working for kernel development</a> <span style="color:#666">(2023-02-24)</span></li>
 
 </ul>
+
 
 
 </div>
