Rename to Technical/Personal Blog Posts, simplify test post

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: Joel Fernandes
 <li><a href="https://lwn.net/Articles/744522/">BPFd: Running BCC tools remotely across systems and architectures</a> (LWN.net)</li>
 </ul>
 
-<h2>Blog Posts</h2>
+<h2>Technical Blog Posts</h2>
 <p><a href="/categories.html">View posts by category</a></p>
 <ul>
 {% for post in site.posts %}
@@ -46,7 +46,7 @@ title: Joel Fernandes
 {% endfor %}
 </ul>
 
-<h2>Personal Posts</h2>
+<h2>Personal Blog Posts</h2>
 <p><a href="/personal.html">View all personal posts</a></p>
 <ul>
 {% for post in site.posts %}
