--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
 
 
+
+
 <li class="recent">2026-02-08 &raquo;<br><a href="/blog/2026-02-08/rust-clist-kernel.html">CList: Iterating C Linked Lists from Rust in the Kernel</a></li>
-
-
 
 
 
@@ -185,9 +185,9 @@
 
 
 
+<li class="recent">2026-02-08 &raquo;<br><a href="/blog/2026-02-08/test-post.html">Test Post</a></li>
 
 
-<li class="recent">2026-02-08 &raquo;<br><a href="/blog/2026-02-08/charlottesville-weather.html">Charlottesville Weather Today</a></li>
 
 
 
@@ -289,14 +289,14 @@
 <li><a href="https://lwn.net/Articles/744522/">BPFd: Running BCC tools remotely across systems and architectures</a> (LWN.net)</li>
 </ul>
 
-<h2>Blog Posts</h2>
+<h2>Technical Blog Posts</h2>
 <p><a href="/categories.html">View posts by category</a></p>
 <ul>
 
 
+
+
 <li><a href="/blog/2026-02-08/rust-clist-kernel.html">CList: Iterating C Linked Lists from Rust in the Kernel</a> <span style="color:#666">(2026-02-08)</span></li>
-
-
 
 
 
@@ -409,14 +409,14 @@
 
 </ul>
 
-<h2>Personal Posts</h2>
+<h2>Personal Blog Posts</h2>
 <p><a href="/personal.html">View all personal posts</a></p>
 <ul>
 
 
+<li><a href="/blog/2026-02-08/test-post.html">Test Post</a> <span style="color:#666">(2026-02-08)</span></li>
 
 
-<li><a href="/blog/2026-02-08/charlottesville-weather.html">Charlottesville Weather Today</a> <span style="color:#666">(2026-02-08)</span></li>
 
 
 
