--- a/personal.html
+++ b/personal.html
@@ -35,9 +35,9 @@
 
 
 
+
+
 <li class="recent">2026-02-08 &raquo;<br><a href="/blog/2026-02-08/rust-clist-kernel.html">CList: Iterating C Linked Lists from Rust in the Kernel</a></li>
-
-
 
 
 
@@ -185,9 +185,9 @@
 
 
 
+<li class="recent">2026-02-08 &raquo;<br><a href="/blog/2026-02-08/test-post.html">Test Post</a></li>
 
 
-<li class="recent">2026-02-08 &raquo;<br><a href="/blog/2026-02-08/charlottesville-weather.html">Charlottesville Weather Today</a></li>
 
 
 
@@ -267,9 +267,9 @@
 <ul>
 
 
+<li><a href="/blog/2026-02-08/test-post.html">Test Post</a> <span style="color:#666">(2026-02-08)</span></li>
 
 
-<li><a href="/blog/2026-02-08/charlottesville-weather.html">Charlottesville Weather Today</a> <span style="color:#666">(2026-02-08)</span></li>
 
 
 
